# diceware_passphrase_generator

./: .gitignore  README.md  setup.cfg  setup.py
src/: TODO.md  main.py  main_copy.py
tests/: test_main.py
