[metadata]
name = diceware
version = 1.0.0
description = A simple passphrase generator that uses the diceware method
author = Lucas Heredia
author_email = lucasherediadv@gmail.com
url = https://github.com/lucasherediadv/diceware_passphrase_generator

[options]
packages = find:

[options.packages.find]
exclude = *tests

[options.entry_points]
console_scripts = 
    diceware = src.main:main
